# - an entry should not explain why a change was made, but rather what the change was
#   (the explanation of why belongs in the source code itself)
#
# http://www.cybop.net
# - Cybernetics Oriented Programming -
#
# @version $RCSfile: ChangeLog,v $ $Revision: 1.147 $ $Date: 2009-10-06 21:25:26 $ $Author: christian $
# @author Christian Heller <christian.heller@tuxtax.de>
#

2011-07-28  Christian Heller  <christian.heller@tuxtax.de>

        * Make "helper.c" and "informant.c" function again
        * Start refactoring file "manager.c"

2011-07-27  Christian Heller  <christian.heller@tuxtax.de>

        * Replace outdated "replacer" and "appender" functionality with "overwriter"
        * Fix "optionaliser.c", so that log file is usable again
        * Use item structure for knowledge file path in "cyboi.c" and functions called from there

2011-07-26  Christian Heller  <christian.heller@tuxtax.de>

        * Replace outdated "assigner" functionality with "copier"

2011-07-25  Christian Heller  <christian.heller@tuxtax.de>

        * Replace outdated "detect" function with new "detect_array" function

2011-07-24  Christian Heller  <christian.heller@tuxtax.de>

        * Fix prefix of indentation ("+-" or "#-") for model_diagram (knowledge tree) output
        * Test part retrieval via hierarchical knowledge path name in file "finder_tester.c"

2011-07-23  Christian Heller  <christian.heller@tuxtax.de>

        * Process hierarchical knowledge path names, in order to get a part from the knowledge tree
            (directories "executor/searcher/" and "executor/modifier/getter/")

2011-07-22  Christian Heller  <christian.heller@tuxtax.de>

        * Complete and test deep part comparison in files "part_comparator.c" and test in file "comparator_tester.c"

2011-07-21  Christian Heller  <christian.heller@tuxtax.de>

        * Complete and test deep part copying (pointer array elements including their children)