@@ -33,6 +33,7 @@
 #include "../../../constant/model/memory/integer_memory_model.c"
 #include "../../../constant/model/memory/pointer_memory_model.c"
 #include "../../../executor/comparator/all/array_all_comparator.c"
+#include "../../../executor/modifier/copier/integer_copier.c"
 #include "../../../logger/logger.c"
 
 /**
