@@ -34,6 +34,8 @@
 #include "../../../constant/model/memory/pointer_memory_model.c"
 #include "../../../executor/arithmetiser/integer_adder.c"
 #include "../../../executor/arithmetiser/integer_multiplier.c"
+#include "../../../executor/comparator/basic/integer_comparator.c"
+#include "../../../executor/memoriser/reallocator/array_reallocator.c"
 #include "../../../executor/memoriser/offset_adder.c"
 #include "../../../executor/memoriser/size_determiner.c"
 #include "../../../executor/modifier/copier/integer_copier.c"
