@@ -31,7 +31,9 @@
 #include "../../../constant/model/log/message_log_model.c"
 #include "../../../constant/model/memory/integer_memory_model.c"
 #include "../../../constant/model/memory/pointer_memory_model.c"
-#include "../../../executor/converter/encoder/model_diagram_encoder.c"
+#include "../../../executor/arithmetiser/integer_adder/pointer_integer_adder.c"
+#include "../../../executor/arithmetiser/integer_multiplier/integer_integer_multiplier.c"
+#include "../../../executor/arithmetiser/integer_subtracter/integer_integer_subtracter.c"
 #include "../../../logger/logger.c"
 #include "../../../variable/type_size/integral_type_size.c"
 
@@ -54,11 +56,11 @@ void move_position(void* p0, void* p1, void* p2, void* p3) {
     // Determine abstraction (type) size.
     determine_size((void*) &m, p2);
     // Calculate memory area.
-    multiply_with_integer((void*) &m, p3, (void*) INTEGER_PRIMITIVE_MEMORY_ABSTRACTION);
+    multiply_integer_with_integer((void*) &m, p3);
     // Add memory area to current position.
-    add_integer(p0, (void*) &m, (void*) POINTER_PRIMITIVE_MEMORY_ABSTRACTION);
+    add_integer_to_pointer(p0, (void*) &m);
     // Subtract count from remaining count.
-    subtract_integer(p1, p3, (void*) INTEGER_PRIMITIVE_MEMORY_ABSTRACTION);
+    subtract_integer_from_integer(p1, p3);
 }
 
 /* POSITION_MOVER_SOURCE */
